--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.1.2",
     "autoprefixer": "^10.4.15",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
